# python-new-project

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.sh
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_name}}/tests/: test_project.py
