[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}}"]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"
rich = "*"
stackprinter = "*"
typer = "*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "==20.8b1"
flake8 = "==3.8.4"
mypy = "*"
precommit = "*"
pysnooper = "*"
pytest = "*"
pytest-sugar = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
